--- a/src/app/pages/gest-documental/retiros/nuevo-retiro.component.html
+++ b/src/app/pages/gest-documental/retiros/nuevo-retiro.component.html
@@ -10,11 +10,12 @@
                     <div class="row p-t-20">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label label-form-decora">Nombres y Apellidos de Modelo:</label>
+                                <label class="control-label label-form-decora">Nombres y Apellidos de Empleado:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-face-smile"></i></div>
-                                    <select class="form-control custom-select" id="model" formControlName="modelo">
-                                        <option *ngFor="let modelo of modelosList" [value]="modelo._id">{{modelo.nombres}} {{modelo.apellidos}}</option>
+                                    <select class="form-control custom-select" id="model" formControlName="empleado">
+                                        <option value="null">--Seleccione una opción--</option>
+                                        <option *ngFor="let empleado of empleadosList" [value]="empleado._id">{{empleado.nombApellConca}}</option>
                                     </select>
                                 </div>
                             </div>
@@ -62,7 +63,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="control-label label-form-decora">¿Presento encuesta de retiro?</label>
@@ -75,10 +75,7 @@
 
                     &nbsp;
                     <div>
-                        <button type="submit" class="btn btn-success waves-effect waves-pupple m-r-10" [disabled]="retiroForm.invalid">
-                            <i class="fa fa-save"></i>
-                            Guardar
-                        </button>
+                        <button type="submit" class="btn btn-success waves-effect waves-pupple m-r-10" [disabled]="retiroForm.invalid"><i class="fa fa-save"></i>  Guardar</button>
                     </div>
                 </form>
             </div>
